--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <img src="https://www.cameronsworld.net/img/content/32/treasure-room/47.gif" style="width:150px;height:300px">
           <img src="https://www.cameronsworld.net/img/content/32/treasure-room/47.gif" style="width:70px;height:70px">
      </p><br>
-    <h1> {text-align: center;} Brrrrrr</h1> <img src="https://www.cameronsworld.net/img/content/22/1.gif" style="height:200px">
+    <h1>Brrrrrr</h1>
   </body>
 </html>
-Too <b>Late</b>
