--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <<h3>Run!</h3>
     <p>RUN
       <br>
+      <img src="https://www.cameronsworld.net/img/content/32/treasure-room/47.gif" style="width:15px;height:100px">
+      <img src="https://www.cameronsworld.net/img/content/32/treasure-room/47.gif" style="width:70px;height:15px">
       <img src="https://www.cameronsworld.net/img/content/17/20.gif" style="height:500px">
       <img src="https://www.cameronsworld.net/img/content/32/treasure-room/47.gif" style="width:200px;height:100px">
         <img src="https://www.cameronsworld.net/img/content/32/treasure-room/47.gif" style="width:150px;height:300px">
